--- a/www-apache/passenger/ChangeLog
+++ b/www-apache/passenger/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-apache/passenger
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/passenger/ChangeLog,v 1.38 2011/10/14 09:23:35 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/passenger/ChangeLog,v 1.39 2011/12/26 11:51:00 graaff Exp $
+
+*passenger-3.0.11 (26 Dec 2011)
+
+  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> +passenger-3.0.11.ebuild:
+  Version bump. Respect CC and CXX settings, bug 331287 with patch from Olivier
+  Huber.
 
 *passenger-3.0.9 (14 Oct 2011)
 
