--- a/dev-util/android-sdk-update-manager/ChangeLog
+++ b/dev-util/android-sdk-update-manager/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/android-sdk-update-manager
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/android-sdk-update-manager/ChangeLog,v 1.31 2011/11/29 20:07:32 rich0 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/android-sdk-update-manager/ChangeLog,v 1.32 2011/12/26 12:28:40 rich0 Exp $
+
+*android-sdk-update-manager-16 (26 Dec 2011)
+
+  26 Dec 2011; Richard Freeman <rich0@gentoo.org>
+  +android-sdk-update-manager-16.ebuild:
+  bump - 395921
 
 *android-sdk-update-manager-15 (29 Nov 2011)
 
