--- a/x11-plugins/wmfire/ChangeLog
+++ b/x11-plugins/wmfire/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmfire
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/wmfire/ChangeLog,v 1.18 2011/12/16 17:14:26 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/wmfire/ChangeLog,v 1.19 2011/12/26 12:34:27 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> wmfire-1.2.4-r1.ebuild:
+  x86 stable, bug #394081
 
   16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> wmfire-1.2.4-r1.ebuild:
   Stable for AMD64, wrt bug #394081
