--- a/app-misc/alexandria/ChangeLog
+++ b/app-misc/alexandria/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/alexandria
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/alexandria/ChangeLog,v 1.47 2011/12/26 10:56:58 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/alexandria/ChangeLog,v 1.48 2011/12/26 12:35:17 ago Exp $
+
+  26 Dec 2011; Agostino Sarubbo <ago@gentoo.org> alexandria-0.6.7.ebuild:
+  Stable for AMD64, wrt bug #396061
 
 *alexandria-0.6.8 (26 Dec 2011)
 
