--- a/www-apache/mod_limitipconn/ChangeLog
+++ b/www-apache/mod_limitipconn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apache/mod_limitipconn
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_limitipconn/ChangeLog,v 1.5 2011/12/18 12:07:09 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_limitipconn/ChangeLog,v 1.6 2011/12/26 12:37:06 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> mod_limitipconn-0.23.ebuild:
+  x86 stable, bug #394083
 
   18 Dec 2011; Agostino Sarubbo <ago@gentoo.org> mod_limitipconn-0.23.ebuild:
   Stable for AMD64, wrt bug #394083
