--- a/dev-python/psycopg/ChangeLog
+++ b/dev-python/psycopg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/psycopg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.135 2011/12/24 12:34:33 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.136 2011/12/26 12:35:38 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> psycopg-2.4.2.ebuild:
+  x86 stable, bug #392749
 
   24 Dec 2011; Agostino Sarubbo <ago@gentoo.org> psycopg-2.4.2.ebuild:
   Stable for AMD64, wrt bug #392749
