--- a/sci-chemistry/rasmol/ChangeLog
+++ b/sci-chemistry/rasmol/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/rasmol
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/rasmol/ChangeLog,v 1.29 2011/12/15 08:33:05 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/rasmol/ChangeLog,v 1.30 2011/12/26 12:40:28 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> rasmol-2.7.5.1.ebuild:
+  x86 stable, bug #394085
 
   15 Dec 2011; Justin Lecher <jlec@gentoo.org> rasmol-2.7.5.1.ebuild,
   rasmol-2.7.5.2.ebuild:
