--- a/media-libs/gavl/ChangeLog
+++ b/media-libs/gavl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gavl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gavl/ChangeLog,v 1.18 2011/12/15 11:44:46 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gavl/ChangeLog,v 1.19 2011/12/26 14:32:28 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> gavl-1.2.0.ebuild:
+  x86 stable, bug #394291
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gavl-1.2.0.ebuild:
   Stable for AMD64, wrt bug #394291
