--- a/media-plugins/frei0r-plugins/ChangeLog
+++ b/media-plugins/frei0r-plugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/frei0r-plugins
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/frei0r-plugins/ChangeLog,v 1.16 2011/12/15 11:45:50 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/frei0r-plugins/ChangeLog,v 1.17 2011/12/26 14:33:22 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> frei0r-plugins-1.3.ebuild:
+  x86 stable, bug #394291
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> frei0r-plugins-1.3.ebuild:
   Stable for AMD64, wrt bug #394291
