--- a/net-libs/libproxy/ChangeLog
+++ b/net-libs/libproxy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.72 2011/12/18 22:26:12 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.73 2011/12/26 14:40:30 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> libproxy-0.4.7.ebuild:
+  x86 stable, bug #394363
 
   18 Dec 2011; Markus Meier <maekke@gentoo.org> libproxy-0.4.7.ebuild:
   arm stable, bug #394363
