--- a/media-libs/libwebp/ChangeLog
+++ b/media-libs/libwebp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libwebp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libwebp/ChangeLog,v 1.21 2011/12/15 11:23:34 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libwebp/ChangeLog,v 1.22 2011/12/26 14:41:35 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> libwebp-0.1.3.ebuild:
+  x86 stable, bug #394299
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> libwebp-0.1.3.ebuild:
   Stable for AMD64, wrt bug #394299
