--- a/x11-libs/libva-intel-driver/ChangeLog
+++ b/x11-libs/libva-intel-driver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libva-intel-driver
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libva-intel-driver/ChangeLog,v 1.2 2011/12/15 13:33:22 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libva-intel-driver/ChangeLog,v 1.3 2011/12/26 14:47:20 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org>
+  libva-intel-driver-1.0.15.ebuild:
+  x86 stable, bug #394397
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
   libva-intel-driver-1.0.15.ebuild:
