--- a/app-emacs/ocaml-mode/ChangeLog
+++ b/app-emacs/ocaml-mode/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/ocaml-mode
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/ocaml-mode/ChangeLog,v 1.50 2011/12/26 12:37:18 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/ocaml-mode/ChangeLog,v 1.51 2011/12/26 16:53:26 ago Exp $
+
+  26 Dec 2011; Agostino Sarubbo <ago@gentoo.org> ocaml-mode-3.12.1.ebuild:
+  Stable for AMD64, wrt bug #396019
 
   26 Dec 2011; Agostino Sarubbo <ago@gentoo.org> ocaml-mode-3.12.1.ebuild:
   Stable for AMD64, wrt bug #396019
