--- a/kde-base/kdepimlibs/ChangeLog
+++ b/kde-base/kdepimlibs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdepimlibs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepimlibs/ChangeLog,v 1.123 2011/12/18 19:46:33 dilfridge Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepimlibs/ChangeLog,v 1.124 2011/12/26 17:10:32 ago Exp $
+
+  26 Dec 2011; Agostino Sarubbo <ago@gentoo.org> kdepimlibs-4.7.3-r1.ebuild:
+  Stable for X86/AMD64, wrt bug #382411
 
   18 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   -kdepimlibs-4.6.5.ebuild:
