--- a/kde-base/kdepimlibs/ChangeLog
+++ b/kde-base/kdepimlibs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdepimlibs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepimlibs/ChangeLog,v 1.124 2011/12/26 17:10:32 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepimlibs/ChangeLog,v 1.125 2011/12/26 18:37:07 dilfridge Exp $
+
+  26 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  -kdepimlibs-4.7.3.ebuild, -kdepimlibs-4.7.4.ebuild:
+  Remove old
 
   26 Dec 2011; Agostino Sarubbo <ago@gentoo.org> kdepimlibs-4.7.3-r1.ebuild:
   Stable for X86/AMD64, wrt bug #382411
