--- a/dev-util/diffstat/ChangeLog
+++ b/dev-util/diffstat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/diffstat
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/diffstat/ChangeLog,v 1.112 2011/12/26 11:39:51 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/diffstat/ChangeLog,v 1.113 2011/12/26 20:16:34 jer Exp $
+
+  26 Dec 2011; Jeroen Roovers <jer@gentoo.org> diffstat-1.54.ebuild:
+  Stable for HPPA (bug #395691).
 
   26 Dec 2011; Markus Meier <maekke@gentoo.org> diffstat-1.54.ebuild:
   arm stable, bug #395691
