--- a/dev-ruby/mustache/ChangeLog
+++ b/dev-ruby/mustache/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/mustache
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/mustache/ChangeLog,v 1.13 2011/12/04 23:23:34 naota Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/mustache/ChangeLog,v 1.14 2011/12/27 12:38:02 graaff Exp $
+
+  27 Dec 2011; Hans de Graaff <graaff@gentoo.org> mustache-0.99.4.ebuild:
+  Add ruby19.
 
   04 Dec 2011; Naohiro Aota <naota@gentoo.org> mustache-0.99.4.ebuild:
   Add ~x86-fbsd.
