--- a/sys-kernel/dracut/ChangeLog
+++ b/sys-kernel/dracut/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/dracut
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.36 2011/12/27 14:01:05 aidecoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.37 2011/12/27 14:03:14 aidecoe Exp $
+
+  27 Dec 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> -dracut-013.ebuild,
+  -dracut-013-r1.ebuild:
+  Removed old 013 revisions.
 
 *dracut-014 (27 Dec 2011)
 
