--- a/x11-apps/xdpyinfo/ChangeLog
+++ b/x11-apps/xdpyinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xdpyinfo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdpyinfo/ChangeLog,v 1.72 2011/12/21 21:44:05 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdpyinfo/ChangeLog,v 1.73 2011/12/27 20:53:50 maekke Exp $
+
+  27 Dec 2011; Markus Meier <maekke@gentoo.org> xdpyinfo-1.3.0.ebuild:
+  x86 stable, bug #394393
 
   21 Dec 2011; Markus Meier <maekke@gentoo.org> xdpyinfo-1.3.0.ebuild:
   arm stable, bug #394393
