--- a/x11-drivers/ati-drivers/ChangeLog
+++ b/x11-drivers/ati-drivers/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-drivers/ati-drivers
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.267 2011/12/20 15:37:04 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.268 2011/12/27 21:01:56 maekke Exp $
+
+  27 Dec 2011; Markus Meier <maekke@gentoo.org> ati-drivers-11.11.ebuild:
+  x86 stable, bug #394393
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> ati-drivers-11.11.ebuild:
   Stable for AMD64, wrt bug #394393
