--- a/x11-drivers/xf86-video-nouveau/ChangeLog
+++ b/x11-drivers/xf86-video-nouveau/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-nouveau
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nouveau/ChangeLog,v 1.39 2011/12/20 15:34:31 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nouveau/ChangeLog,v 1.40 2011/12/27 21:07:16 maekke Exp $
+
+  27 Dec 2011; Markus Meier <maekke@gentoo.org>
+  xf86-video-nouveau-0.0.16_pre20111109.ebuild:
+  x86 stable, bug #394393
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
   xf86-video-nouveau-0.0.16_pre20111109.ebuild:
