--- a/kde-base/korundum/ChangeLog
+++ b/kde-base/korundum/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/korundum
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/korundum/ChangeLog,v 1.96 2011/12/11 18:52:18 alexxy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/korundum/ChangeLog,v 1.97 2011/12/27 21:35:45 dilfridge Exp $
+
+  27 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org> korundum-4.7.3.ebuild,
+  korundum-4.7.4.ebuild:
+  Make semantic-desktop a hard dep, workaround for bug 395679
 
 *korundum-4.7.4 (11 Dec 2011)
 
