--- a/x11-libs/qt-phonon/ChangeLog
+++ b/x11-libs/qt-phonon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt-phonon
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qt-phonon/ChangeLog,v 1.101 2011/12/20 23:13:32 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qt-phonon/ChangeLog,v 1.102 2011/12/27 21:43:59 maekke Exp $
+
+  27 Dec 2011; Markus Meier <maekke@gentoo.org> qt-phonon-4.7.4.ebuild:
+  x86 stable, bug #390963
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> qt-phonon-4.7.4.ebuild:
   Stable for AMD64, wrt bug #390963
