--- a/www-servers/nginx/ChangeLog
+++ b/www-servers/nginx/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/nginx
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/nginx/ChangeLog,v 1.302 2011/12/27 07:40:00 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/nginx/ChangeLog,v 1.303 2011/12/28 05:49:12 patrick Exp $
+
+*nginx-1.1.12-r1 (28 Dec 2011)
+
+  28 Dec 2011; Patrick Lauer <patrick@gentoo.org> +nginx-1.1.12-r1.ebuild,
+  metadata.xml, nginx-1.1.12.ebuild:
+  Add pcre-jit support
 
 *nginx-1.1.12 (27 Dec 2011)
 
