--- a/dev-ruby/tzinfo/ChangeLog
+++ b/dev-ruby/tzinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/tzinfo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.93 2011/12/18 15:52:49 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.94 2011/12/28 08:10:29 graaff Exp $
+
+  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> -tzinfo-0.3.30.ebuild:
+  Remove old version.
 
   18 Dec 2011; Raúl Porcel <armin76@gentoo.org> tzinfo-0.3.31.ebuild:
   ia64/sparc stable wrt #393667
