--- a/dev-ruby/rspec-expectations/ChangeLog
+++ b/dev-ruby/rspec-expectations/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rspec-expectations
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.18 2011/10/12 17:51:40 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.19 2011/12/28 08:21:30 graaff Exp $
+
+*rspec-expectations-2.6.0-r1 (28 Dec 2011)
+
+  28 Dec 2011; Hans de Graaff <graaff@gentoo.org>
+  rspec-expectations-2.6.0.ebuild, +rspec-expectations-2.6.0-r1.ebuild:
+  Revision bump to drop ruby19 from stable version.
 
   12 Oct 2011; Hans de Graaff <graaff@gentoo.org>
   rspec-expectations-2.6.0.ebuild:
