--- a/dev-ruby/subexec/ChangeLog
+++ b/dev-ruby/subexec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/subexec
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/subexec/ChangeLog,v 1.4 2011/12/28 11:10:02 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/subexec/ChangeLog,v 1.5 2011/12/28 11:13:01 graaff Exp $
+
+  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> subexec-0.2.0.ebuild:
+  Drop ruby-debug dependency. It's not needed and not ruby19-ready.
 
   28 Dec 2011; Hans de Graaff <graaff@gentoo.org> -subexec-0.0.4.ebuild,
   -subexec-0.1.0.ebuild:
