--- a/dev-ruby/net-ssh/ChangeLog
+++ b/dev-ruby/net-ssh/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/net-ssh
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.94 2011/12/28 08:29:42 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.95 2011/12/28 11:16:34 graaff Exp $
+
+  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.1.4.ebuild,
+  -net-ssh-2.2.0.ebuild:
+  Remove old versions.
 
   28 Dec 2011; Hans de Graaff <graaff@gentoo.org> net-ssh-2.0.23.ebuild:
   Drop ruby19 from stable version.
