--- a/dev-python/timelib/ChangeLog
+++ b/dev-python/timelib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/timelib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/timelib/ChangeLog,v 1.5 2011/12/28 22:47:35 floppym Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/timelib/ChangeLog,v 1.6 2011/12/28 22:55:02 floppym Exp $
+
+  28 Dec 2011; Mike Gilbert <floppym@gentoo.org> timelib-0.2.3.ebuild:
+  Restrict jython and drop CFLAGS override. Another Arfrever sighting.
 
   28 Dec 2011; Mike Gilbert <floppym@gentoo.org> timelib-0.2.3.ebuild:
   DEPEND on app-arch/unzip, spotted by Arfrever.
