--- a/dev-util/cmt/ChangeLog
+++ b/dev-util/cmt/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/cmt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cmt/ChangeLog,v 1.9 2011/03/23 19:11:02 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cmt/ChangeLog,v 1.10 2011/12/29 09:04:19 bicatali Exp $
+
+*cmt-1.23 (29 Dec 2011)
+
+  29 Dec 2011; Sébastien Fabbro <bicatali@gentoo.org>
+  -cmt-1.20.20090520.ebuild, +cmt-1.23.ebuild:
+  Version bump
 
 *cmt-1.22 (23 Mar 2011)
 
