--- a/virtual/ruby-test-unit/ChangeLog
+++ b/virtual/ruby-test-unit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/ruby-test-unit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/ruby-test-unit/ChangeLog,v 1.22 2011/12/28 16:28:59 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/ruby-test-unit/ChangeLog,v 1.23 2011/12/29 15:26:23 graaff Exp $
+
+  29 Dec 2011; Hans de Graaff <graaff@gentoo.org> ruby-test-unit-0-r4.ebuild:
+  Add alpha keyword now that the underlying ruby:1.9 is keyworded again.
 
   28 Dec 2011; Hans de Graaff <graaff@gentoo.org> ruby-test-unit-0-r4.ebuild:
   Add keywords similar to the underlying implementation, most notable ruby 1.9.
