--- a/app-admin/system-config-printer-gnome/ChangeLog
+++ b/app-admin/system-config-printer-gnome/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/system-config-printer-gnome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.37 2011/10/30 14:37:46 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.38 2011/12/29 17:11:07 pacho Exp $
+
+  29 Dec 2011; Pacho Ramos <pacho@gentoo.org>
+  system-config-printer-gnome-1.3.7.ebuild:
+  amd64 stable, bug 393007
 
   30 Oct 2011; Raúl Porcel <armin76@gentoo.org>
   system-config-printer-gnome-1.3.6.ebuild:
