--- a/dev-libs/libgdata/ChangeLog
+++ b/dev-libs/libgdata/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libgdata
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.38 2011/11/15 22:54:00 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.39 2011/12/29 17:28:26 pacho Exp $
+
+  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> libgdata-0.8.1-r1.ebuild:
+  amd64 stable, bug 393007
 
 *libgdata-0.8.1-r1 (15 Nov 2011)
 
