--- a/dev-util/itstool/ChangeLog
+++ b/dev-util/itstool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/itstool
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/itstool/ChangeLog,v 1.3 2011/11/25 17:25:16 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/itstool/ChangeLog,v 1.4 2011/12/29 17:38:14 pacho Exp $
+
+  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> itstool-1.1.1.ebuild:
+  amd64 stable, bug 393007
 
   25 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
   itstool-1.1.1.ebuild:
