--- a/net-libs/rest/ChangeLog
+++ b/net-libs/rest/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/rest
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/rest/ChangeLog,v 1.4 2011/11/13 08:20:04 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/rest/ChangeLog,v 1.5 2011/12/29 18:03:57 pacho Exp $
+
+  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> rest-0.7.12.ebuild:
+  amd64 stable, bug 393007
 
 *rest-0.7.12 (13 Nov 2011)
 
