--- a/net-libs/telepathy-farsight/ChangeLog
+++ b/net-libs/telepathy-farsight/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/telepathy-farsight
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/telepathy-farsight/ChangeLog,v 1.28 2011/11/09 09:54:43 ford_prefect Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/telepathy-farsight/ChangeLog,v 1.29 2011/12/29 18:04:37 pacho Exp $
+
+  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> telepathy-farsight-0.0.19.ebuild:
+  amd64 stable, bug 393007
 
 *telepathy-farsight-0.0.19 (09 Nov 2011)
 
