--- a/sys-block/gparted/ChangeLog
+++ b/sys-block/gparted/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/gparted
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/gparted/ChangeLog,v 1.105 2011/12/16 17:48:08 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/gparted/ChangeLog,v 1.106 2011/12/29 18:13:20 pacho Exp $
+
+  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> gparted-0.10.0.ebuild:
+  amd64 stable, bug 393007
 
 *gparted-0.11.0 (16 Dec 2011)
 
