--- a/dev-util/dialog/ChangeLog
+++ b/dev-util/dialog/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/dialog
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/dialog/ChangeLog,v 1.142 2011/12/28 16:44:25 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/dialog/ChangeLog,v 1.143 2011/12/30 04:09:02 jer Exp $
+
+  30 Dec 2011; Jeroen Roovers <jer@gentoo.org> dialog-1.1.20110707-r1.ebuild:
+  Stable for HPPA (bug #396161).
 
 *dialog-1.1.20111020-r1 (28 Dec 2011)
 
